Fix Post image preview not showing when creating post (#79)
* Fix posts not being full width

* Fix img preview not showing when creating post

* Update picture modal to use imgURL

* Fix Post component frontend test

--- a/application/src/components/post/post.css
+++ b/application/src/components/post/post.css
@@ -45,6 +45,7 @@
 .post-body {
     /* Keep extra whitespace inside the description of the post (e.g., newlines) */
     white-space: pre-wrap;
+    width: 100%;
 }
 
 .tag-container {
